feat: Lv4. 페이징 리팩토링 - PagingResponseDto 적용
## 변경 사항
- JdbcTemplateScheduleRepository
  - findAllWithPaging(offset, limit) 구현
  - count() 메서드 추가 (전체 일정 수 조회용)

- ScheduleRepository
  - count() 추상 메서드 추가

- ScheduleService
  - getSchedules(int page, int size) 반환 타입을 PagingResponseDto로 변경

- ScheduleServiceImpl
  - getSchedules 리팩토링 (전체 개수 계산 및 메타정보 포함)
  - totalPages, totalElements 계산 로직 추가

- ScheduleController
  - GET /schedules/paged 요청 시 PagingResponseDto 반환

- PagingResponseDto
  - 페이징 응답용 DTO 신규 생성
  - content + page + size + totalPages + totalElements 포함

## 커밋 이유
- 사용자에게 일정 목록을 페이지 단위로 제공하면서, 전체 페이지 수와 총 개수 등 메타정보도 함께 전달하기 위함
- 실무에서 사용하는 페이징 응답 포맷을 적용하여 클라이언트 편의성 및 API 명확성 향상